fix password checking, create hobby box

--- a/src/components/InformWindow/InformWindow.scss
+++ b/src/components/InformWindow/InformWindow.scss
@@ -20,7 +20,8 @@
         .gender,
         .email,
         .phone,
-        .ocean {
+        .ocean,
+        .hobby {
             &_box {
                 border: 2px solid #80858B;
                 border-radius: 6px;
